--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
     <title>Coder Clone</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,7 +22,7 @@
             <li><a href="">Cursos y Carreras</a></li>
             <li><a href="">Comunidad</a></li>
             <li><a href="">Nosotros</a></li>
-            <li><a href="">Plataforma</a></li>
+            <li><a href="./pages/plataform.html">Plataforma</a></li>
           </ul>
         </nav>
       </div>
@@ -82,6 +83,38 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__grid container">
+        <div>
+          <h4>Educación</h4>
+          <ul class="footer__grid-list">
+            <li><a href="">Diseño UX/UI</a></li>
+            <li><a href="">Programación</a></li>
+            <li><a href="">Ciberseguridad</a></li>
+            <li><a href="">Data</a></li>
+            <li><a href="">Marketing digital</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4>Nosotros</h4>
+          <ul class="footer__grid-list">
+            <li><a href="">Equipo</a></li>
+            <li><a href="">Terminos y condiciones</a></li>
+            <li><a href="">Más</a></li>
+           </ul>
+        </div>
+        <div>
+            <h3>Sumate a Coder y llevá tu carrera al próximo nivel</h3>
+            <div class="footer__rrss">
+              <a href=""><i class="bi bi-twitter"></i></a>
+              <a href=""><i class="bi bi-instagram"></i></a>
+              <a href=""><i class="bi bi-facebook"></i></a>
+            </div>
+            
+            
+        </div>
+
+      </div>      
+    </footer>
   </body>
 </html>
